--- a/main.css
+++ b/main.css
@@ -194,3 +194,9 @@ input:checked+.slider:before {
   background: rgb(248, 248, 248);
   border: 2px solid rgb(0, 141, 255);
 }
+
+@media only screen and (max-width: 1150px) {
+  .kalk__main {
+    flex-direction: column;
+  }
+}
